--- a/flask/lyft3dapp/lyft3dapp/templates/result.html
+++ b/flask/lyft3dapp/lyft3dapp/templates/result.html
@@ -3,7 +3,7 @@
 
 
 <head>
-    <title>Rock Paper Scissor App</title>
+    <title>3D Bounding Boxes</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
         body {
@@ -36,7 +36,7 @@
     <div class="hero-image">
         <div class="hero-text">
             <h2 style="color:white;font-size:40px;">Prediction: {{ category }}</h2>
-            <img src="static/images/output.png" alt="Input Image" width="250" height="250">
+            <img src="static/images/output.png" alt="Input Image" width="1240" height="375">
         </div>
     </div>
 </body>
