--- a/flask/lyft3dapp/lyft3dapp/templates/result.html
+++ b/flask/lyft3dapp/lyft3dapp/templates/result.html
@@ -11,16 +11,6 @@
             font-family: Arial, Helvetica, sans-serif;
         }
 
-        .hero-image {
-            background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("/static/images/rps.png");
-            background-color: #cccccc;
-            height: 100vh;
-            background-position: center;
-            background-repeat: no-repeat;
-            background-size: cover;
-            position: relative;
-        }
-
         .hero-text {
             text-align: center;
             position: absolute;
@@ -36,7 +26,7 @@
     <div class="hero-image">
         <div class="hero-text">
             <h2 style="color:white;font-size:40px;">Prediction: {{ category }}</h2>
-            <img src="static/images/output.png" alt="Input Image" width="1240" height="375">
+            <img class="NO-CACHE" src="static/images/output.png" alt="Input Image" width="1240" height="375">
         </div>
     </div>
 </body>
